# src-cli

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  bgm.webm
.github/workflows/: rust.yml
src/: config.rs  ffmpeg.rs  main.rs  text_utils.rs
src/ffmpeg/: text.rs
