[package]
name = "src-cli"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
jieba-rs = "0.8.1"
once_cell = "1.21.3"
os_info = { version = "3", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
unicode-segmentation = "1.12.0"
